Implementado arranque del Service, comentado por imposibilidad de arrancarlo.
Signed-off-by: Flavio Corpa Ríos <flavio.corpa@energysistem.com>

--- a/EnergyUbication/AndroidManifest.xml
+++ b/EnergyUbication/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
-        <service android:name=".UbicationService" android:process=":UbicationService" />
+        <service android:name=".UbicationService" android:process="UbicationService" />
     </application>
 
 </manifest>
