--- a/EnergyUbication/bin/AndroidManifest.xml
+++ b/EnergyUbication/bin/AndroidManifest.xml
@@ -7,9 +7,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    
+
     <uses-sdk
-        android:minSdkVersion="15" 
+        android:minSdkVersion="15"
         android:targetSdkVersion="17" />
 
     <application
@@ -27,10 +27,19 @@
             android:windowSoftInputMode="adjustResize|stateVisible" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".UbicationService" android:process=":UbicationService"/>
+
+        <service
+            android:name="android.ubication.UbicationService"
+            android:process=":UbicationService" />
+
+        <activity
+            android:name="android.ubication.Greeting"
+            android:label="@string/title_activity_greeting" >
+        </activity>
     </application>
-    
+
 </manifest>
